<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TokenActivity"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" >

            <ImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/appauth_96dp"
                android:contentDescription="@string/openid_logo_content_description"/>

            <!--
            displayed while token requests are occurring
            -->
            <LinearLayout
                android:id="@+id/loading_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/loading_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <ProgressBar
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"/>

            </LinearLayout>

            <!-- Shown when authorization has failed. -->
            <LinearLayout
                android:id="@+id/not_authorized"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/not_authorized"
                    style="@style/Base.TextAppearance.AppCompat.Title" />

                <TextView
                    android:id="@+id/explanation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp" />

                <Button
                    android:id="@+id/reauth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reauthorize" />

            </LinearLayout>

            <!-- Shown when the user is authorized, and there are no pending operations -->
            <LinearLayout
                android:id="@+id/authorized"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/auth_granted"
                    style="@style/Base.TextAppearance.AppCompat.Title" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                  <Button
                    android:id="@+id/refresh_token"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="88dp"
                    android:layout_height="wrap_content"
                    android:text="@string/refresh_token"
                    android:visibility="invisible" />

                  <Button
                    android:id="@+id/view_profile"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#2196F3"
                    android:text="@string/view_profile" />

                  <Button
                    android:id="@+id/sign_out"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_out"
                    android:visibility="invisible" />
                </LinearLayout>

              <TextView
                android:id="@+id/refresh_token_info"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="invisible"
                tools:text="Refresh token returned" />

              <TextView
                android:id="@+id/access_token_info"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                tools:text="Token expires at: 2016-01-01 12:00 UTC" />

              <TextView
                android:id="@+id/id_token_info"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:visibility="invisible"
                tools:text="ID token returned" />

              <LinearLayout
                android:id="@+id/userinfo_card"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="8dp"
                android:visibility="invisible">

                <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center_vertical"
                  android:orientation="horizontal">

                  <ImageView
                    android:id="@+id/userinfo_profile"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/userinfo_profile_content_description"
                    app:srcCompat="@drawable/unknown_user_48dp" />

                  <TextView
                    android:id="@+id/userinfo_name"
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingLeft="8dp"
                    android:paddingEnd="0dp"
                    android:paddingRight="0dp"
                    tools:text="Jane Doe" />

                </LinearLayout>

                <TextView
                  android:id="@+id/userinfo_json"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="8dp"
                  tools:text="{'blah': 'blah'}" />

                <TextView
                  android:id="@+id/userinfo_token"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="8dp"
                  tools:text="{'token': 'blah'}" />

                <TextView
                  android:id="@+id/userinfo_id_token"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="8dp"
                  tools:text="{'token': 'blah'}" />

                <TextView
                  android:id="@+id/userinfo_state"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="8dp"
                  tools:text="{'token': 'blah'}" />
              </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
